fix 404 page in dark mode

--- a/css/projects.css
+++ b/css/projects.css
@@ -29,7 +29,7 @@ h2#project-header, ul#breakdown-list {
 }
 
 ul li#list-bullet {
-    list-style-type: disc !important;
+    list-style-type: disc;
 }
 
 /* Mobile phone sizes */
